--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,6 @@ set -g default-terminal "screen-256color"
 set -g base-index 1
 
 # window options
-set -g utf8 on
 set -g set-titles on
 set -g automatic-rename on
 
@@ -58,3 +57,13 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'seebi/tmux-colors-solarized'
+
+# Initialize TMUX plugin manager
+run '~/.tmux/plugins/tpm/tpm'
+
+source ~/.tmux/color/lucius.conf
