--- a/tmux.conf
+++ b/tmux.conf
@@ -42,9 +42,9 @@ unbind C-b
 # copy mode
 unbind p
 bind p paste-buffer
-bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'r' rectangle-toggle
-bind -t vi-copy 'y' copy-selection
+
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-pipe "reattach-to-user-namespace pbcopy"
 
 # clear screen
 bind C-l send-keys 'C-l'
